[package]
name = "entrance_derive"
version = "0.3.0"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
edition = "2018"

description = "A crate which provides derive macros for the crate entrance"
repository = "https://github.com/0ncorhynchus/entrance"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
